tons of layout bugs fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,12 @@ body, html {
     padding: 0 0;
 
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    height: auto;
 }
-body .root, body .App {
+body #root, body .App {
     width: 100%;
+    min-height: 100vh;
     height: 100%;
     position: relative;
 }
