--- a/frontend/src/components/game/createGamePage/CreateGamePage.module.css
+++ b/frontend/src/components/game/createGamePage/CreateGamePage.module.css
@@ -103,6 +103,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    flex-wrap: wrap;
 
     margin-top: 10px;
 }
