--- a/frontend/src/components/main/MainApp.module.css
+++ b/frontend/src/components/main/MainApp.module.css
@@ -1,5 +1,6 @@
 .mainBody{
-    height: 100%;
     padding-top: 110px;
     padding-bottom: 100px;
+    /*min-height: calc(100vh - 100px);*/
+    height: auto;
 }
