--- a/frontend/src/components/main/body/MainPageBody.module.css
+++ b/frontend/src/components/main/body/MainPageBody.module.css
@@ -14,6 +14,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: center ;
     justify-content: center;
 }
